<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<RadioGroup
	    android:id="@+id/radio_group"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="horizontal" >
	    <RadioButton 
	        android:id="@+id/radio_button_bin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="33sp"
	        android:text="@string/bin"/>
	    <RadioButton 
	        android:id="@+id/radio_button_oct"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="33sp"
	        android:text="@string/oct"/>
	    <RadioButton 
	        android:id="@+id/radio_button_dec"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="33sp"
	        android:text="@string/dec"/>
	    <RadioButton 
	        android:id="@+id/radio_button_hex"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="33sp"
	        android:text="@string/hex"/>
	</RadioGroup>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:id="@+id/text_out_bin"
	        android:layout_marginTop="30dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="30sp"
	        android:text="@string/bin">
		</TextView>
		<TextView 
		    android:id="@+id/text_bin"
		    android:textIsSelectable="true"
		    android:layout_below="@id/text_out_bin"
		    android:gravity="right"
		    android:layout_marginRight="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/in"
			android:autoSizeTextType="uniform"
			android:height="40dp"
		    android:textSize="25sp"/>
		
		<TextView 
	        android:id="@+id/text_out_oct"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/text_bin"
	        android:textSize="30sp"
	        android:text="@string/oct">
		</TextView>
		<TextView 
		    android:id="@+id/text_oct"
		    android:textIsSelectable="true"
		    android:layout_marginRight="10dp"
		    android:layout_width="match_parent"
		    android:layout_below="@id/text_out_oct"
		    android:gravity="right"
		    android:layout_height="wrap_content"
		    android:hint="@string/in"
			android:height="40dp"
			android:autoSizeTextType="uniform"
		    android:textSize="25sp"/>
		
		<TextView 
	        android:id="@+id/text_out_dec"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/text_oct"
	        android:textSize="30sp"
	        android:text="@string/dec"></TextView>
		<TextView 
		    android:id="@+id/text_dec"
		    android:textIsSelectable="true"
		    android:layout_marginRight="10dp"
		    android:layout_below="@id/text_out_dec"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:hint="@string/in"
			android:height="40dp"
			android:autoSizeTextType="uniform"
		    android:textSize="25sp"/>
		
		<TextView 
	        android:id="@+id/text_out_hex"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/text_dec"
	        android:textSize="30sp"
	        android:text="@string/hex"></TextView>
		<TextView 
		    android:id="@+id/text_hex"
		    android:textIsSelectable="true"
		    android:layout_marginRight="10dp"
		    android:layout_below="@id/text_out_hex"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:hint="@string/in"
			android:height="40dp"
		    android:gravity="right"
			android:autoSizeTextType="uniform"
		    android:textSize="25sp"/>
	</RelativeLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    
		<GridLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:columnCount="5"
			android:orientation="horizontal"
			android:layout_alignParentBottom="true"
			android:rowCount="4" >

			<Button
				android:id="@+id/button_7"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/seven"/>
			<Button
				android:id="@+id/button_8"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/eight"/>
			<Button
				android:id="@+id/button_9"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/nine"/>
			<Button
				android:id="@+id/button_f"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/f"/>

			<Button
				android:id="@+id/button_del"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="fill"
				android:layout_rowSpan="2"
				android:text="@string/del"
				android:textSize="30sp" />

			<Button
				android:id="@+id/button_4"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/four"/>
			<Button
				android:id="@+id/button_5"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/five"/>
			<Button
				android:id="@+id/button_6"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/six"/>
			<Button
				android:id="@+id/button_e"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/e"/>

			<Button
				android:id="@+id/button_1"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/one"/>
			<Button
				android:id="@+id/button_2"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/two"/>
			<Button
				android:id="@+id/button_3"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/three"/>
			<Button
				android:id="@+id/button_d"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/d"/>

			<Button
				android:id="@+id/button_back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_rowSpan="2"
				android:layout_gravity="fill"
				android:text="@string/back"
				android:textSize="30sp" />

			<Button
				android:id="@+id/button_0"
				android:layout_column="0"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/zero"/>
			<Button
				android:id="@+id/button_a"
				android:layout_column="1"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/a"/>
			<Button
				android:id="@+id/button_b"
				android:layout_column="2"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/b"/>
			<Button
				android:id="@+id/button_c"
				android:layout_width="70dp"
				android:layout_height="70dp"
				android:textSize="30sp"
				android:text="@string/c"/>
		</GridLayout>
	</RelativeLayout>
</LinearLayout>